<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrview_auto" android:background="@drawable/img_bottom_menu_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_ksty_hot_rock" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_ksty" android:text="@string/hot_rock" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_zyys" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_zyys" android:text="@string/zyys" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_sthh" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_sthh" android:text="@string/sthh" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_jgsz" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_atuo_jgsz" android:text="@string/jgsz" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_ylam" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_ylam" android:text="@string/ylam" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_ksty" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_ksty" android:text="@string/qnty" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_xyfs" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_xyfs" android:text="@string/xyfs" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_blsbz" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_blsbz" android:text="@string/blsbz" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_gwdr" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_gwdr" android:text="@string/gwdr" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_yjkb" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_yjkb" android:text="@string/yjkb" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:ellipsize="marquee" android:gravity="center" android:id="@id/ckb_ydyms" android:background="@drawable/bk_color_blue" android:focusable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_ydyms" android:text="@string/ydyms" android:layout_weight="1.0" android:marqueeRepeatLimit="marquee_forever" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_ysbj" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_ysbj" android:text="@string/ysbj" android:layout_weight="1.0" />
            <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <CheckBox android:textSize="@dimen/textsize_Large" android:textColor="#ff000000" android:gravity="center" android:id="@id/ckb_xfbj" android:background="@drawable/bk_color_blue" android:layout_width="fill_parent" android:layout_height="0.0dip" android:button="@drawable/bk_auto_xfbj" android:text="@string/xsbj" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
    <ImageView android:id="@id/img_up_arrow" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:src="@drawable/img_auto_down_arrow" android:layout_alignTop="@id/scrview_auto" android:layout_centerHorizontal="true" android:rotation="180.0" />
    <ImageView android:id="@id/img_down_arrow" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:src="@drawable/img_auto_down_arrow" android:layout_alignBottom="@id/scrview_auto" android:layout_centerHorizontal="true" />
</RelativeLayout>