<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bottom_menu_background"
    android:orientation="vertical" >
    
    <CheckBox 
        android:id="@+id/ckb_mode_knead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:button="@drawable/bk_mode_knead"
        android:textSize="15sp"
        android:background="@drawable/bk_color_blue"
        android:textColor="#000"
        android:layout_weight="1"
        android:text="@string/knead"/>
   			<ImageView   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
      <CheckBox 
        android:id="@+id/ckb_mode_tap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:textSize="15sp"
        android:background="@drawable/bk_color_blue"
        android:textColor="#000"
         android:layout_weight="1"
        android:button="@drawable/bk_mode_tap"
        android:text="@string/rap"/>
       		<ImageView   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
      <CheckBox 
        android:id="@+id/ckb_mode_konck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/bk_mode_knock"
        android:paddingLeft="5dp"
         android:background="@drawable/bk_color_blue"
        android:textColor="#000"
         android:layout_weight="1"
        android:textSize="15sp"
        android:text="@string/pat"/>
       <ImageView   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
      <CheckBox 
        android:id="@+id/ckb_mode_rou_kou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/bk_mode_roukou"
        android:paddingLeft="20dp"
         android:background="@drawable/bk_color_blue_pressed"
        android:textColor="#000"
         android:layout_weight="1"
        android:textSize="15sp"
        android:text="@string/knead_knock"/>
      		 <ImageView   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
      <CheckBox 
        android:id="@+id/ckb_mode_shiatsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/bk_mode_shiatsu"
        android:paddingLeft="15dp"
         android:background="@drawable/bk_color_blue_pressed"
        android:textColor="#000"
        android:textSize="15sp"
         android:layout_weight="1"
        android:text="@string/finger"/>
      
</LinearLayout>
