<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bottom_menu_background"
    android:orientation="vertical" >
    <ScrollView 
    android:id="@+id/scr_other"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bottom_menu_background"
     >
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <CheckBox 
        android:id="@+id/ckb_other_zuliao"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:button="@drawable/bk_other_zuliao"
        android:textSize="@dimen/textsize_Large"
        android:background="@drawable/bk_color_blue"
        android:textColor="#A8A8A8"
        android:text="@string/pedicure"/>
   			<View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
         <CheckBox 
        android:id="@+id/ckb_other_thermal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:button="@drawable/bk_other_feet_thermal"
        android:paddingLeft="8dp"
         android:background="@drawable/bk_color_blue"
        android:textColor="#A8A8A8"
        android:textSize="@dimen/textsize_Large"
        android:text="@string/thermal_method"/>
       <View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        /> 
         <CheckBox 
        android:id="@+id/ckb_other_waist_thermal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:button="@drawable/bk_other_feet_thermal"
        android:paddingLeft="8dp"
         android:background="@drawable/bk_color_blue"
        android:textColor="#A8A8A8"
        android:textSize="@dimen/textsize_Large"
        android:text="@string/thermal_waist"/>
       <View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        /> 
      <CheckBox 
        android:id="@+id/ckb_other_feet_thermal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:textSize="@dimen/textsize_Large"
        android:background="@drawable/bk_color_blue"
        android:textColor="#A8A8A8"
        android:button="@drawable/bk_other_feet_thermal"
        android:text="@string/thermal_foot"/>
       		<View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:visibility="gone"
        android:background="#000000"  
        />  
      <!-- musid gone 1126 -->
      <CheckBox 
        android:id="@+id/ckb_other_music"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:button="@drawable/bk_other_music"
        android:paddingLeft="8dp"
        android:visibility="gone"
        android:background="@drawable/bk_color_blue_pressed"
        android:textColor="#000"
        android:textSize="@dimen/textsize_Large"
        android:text="@string/music"/>
      		 <View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
         <CheckBox 
        android:id="@+id/ckb_leftview_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
         android:paddingLeft="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:button="@drawable/bk_leftview_language"
        android:textSize="@dimen/textsize_Large"
        android:background="@drawable/bk_color_blue_pressed"
        android:textColor="#000"
        android:layout_weight="1"
        android:text="@string/language"/>
        	 <View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
        <CheckBox 
        android:id="@+id/ckb_leftview_colorlight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingLeft="8dp"
        android:paddingBottom="10dp"
        android:button="@drawable/bk_leftview_colorlight"
        android:background="@drawable/bk_color_blue"
        android:textColor="@color/bt_text_color"
         android:textSize="@dimen/textsize_Large"
         android:text="@string/colored_light"
        />
         
         <View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
       <CheckBox 
        android:id="@+id/ckb_leftview_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="8dp"
        android:layout_weight="1"
        
        android:button="@drawable/bk_leftview_bluetooth"
        android:textSize="@dimen/textsize_Large"
        android:background="@drawable/bk_bluetooth"
        android:textColor="@color/bt_text_color"
        android:text="@string/bluetooth"/>
         		<View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
         <CheckBox 
        android:id="@+id/ckb_leftview_sound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
         android:button="@drawable/bk_leftview_sound"
        android:textSize="@dimen/textsize_Large"
        android:textColor="#000"
        android:text="@string/touch_sound"
        
       />
         		<View   
        android:layout_width="fill_parent"  
        android:layout_height="0.5dp"  
        android:background="#000000"  
        />  
       
         <CheckBox 
        android:id="@+id/ckb_leftview_update"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:button="@drawable/bk_leftview_update"
        android:textSize="@dimen/textsize_Large"
        android:background="@drawable/bk_color_blue_pressed"
        android:textColor="#000"
        android:paddingLeft="8dp"
        android:text="@string/upgrade"/> 
</LinearLayout>
</ScrollView>
<ImageView 
        android:id="@+id/img_up_arrow_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignTop="@id/scr_other"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@drawable/img_auto_down_arrow"
        android:rotation="180"
        android:visibility="invisible"
        />
<ImageView 
        android:id="@+id/img_down_arrow_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/scr_other"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@drawable/img_auto_down_arrow"
        />
</RelativeLayout>
